--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -7,7 +7,8 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  #vmImage: ubuntu-latest
+  name: local 
 
 steps:
 - script: echo Hello, world!
