--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -8,7 +8,8 @@ trigger:
 
 pool:
   #vmImage: ubuntu-latest
-  name: default 
+#  name: default
+  name: Hosted Agent
 
 steps:
 - script: echo Hello, world!
